# map-cache-kit

./: .editorconfig  .gitmodules  Dockerfile  Makefile  README.md  pyproject.toml
MapCacheKit/: .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  Package.resolved  Package.swift  README.md
MapCacheKit/.swiftpm/: MapCacheKit.xctestplan
MapCacheKit/Sources/MapCacheKit/: configure.swift  entrypoint.swift
MapCacheKit/Sources/map-cache/: entrypoint.swift
MapCacheKit/Tests/MapCacheKitTests/: MapCacheKitDownloadTests.swift  MapCacheKitTests.swift
MapCacheWebUI/: .gitignore  tsconfig.app.json
MapCacheWebUI/src/: main.ts  new-cache-form.ts  state.ts
MapCacheWebUI/src/cache-list/: index.ts  map-caches.module.sass  map-caches.scss  utils.ts  web-socket.ts
__archive/: pyproject.toml
basic-server/macrostrat/map_cache/: utils.py
embedded/: .gitignore  Dockerfile  Package.resolved  Package.swift  README.md  docker-compose.yml
embedded/Legacy/: OldCacheManager.swift  OldServer.swift
embedded/Sources/MobileMapCache/: configure.swift  entrypoint.swift  routes.swift
embedded/Tests/MobileMapCacheTests/: MobileMapCacheDownloadTests.swift  MobileMapCacheTests.swift
macrostrat/map_cache/: __init__.py  config.py  main.py
macrostrat/map_cache/fixtures/: 01-regions.sql  02-tile-storage.sql  04-layers.sql  tile-cache-schema.sql
map-cache-frontend/: .gitignore  index.html  package.json
map-cache-frontend/src/: App.css  App.module.sass  App.ts  main.ts  state.ts  utils.ts
map-cache-frontend/src/cache-list/: cache-listing.ts  cache-map.ts  index.ts  (+6 more)
(+32 files in other folders)
